# BA-sarkisyan-2024

./: CMakeLists.txt  Präsentation_Proposal.pptx  README.md
lib/: fishnet.cmake
resources/: final_dbsc_Corvara_IT_maxD3k_maxN5_beta2.dbf  final_dbsc_Corvara_IT_maxD3k_maxN5_beta2.qix  final_dbsc_Corvara_IT_maxD3k_maxN5_beta2.shp  final_dbsc_Corvara_IT_maxD3k_maxN5_beta2.shx  final_dbscan_Corvara_IT_maxDist1k.dbf  final_dbscan_Corvara_IT_maxDist1k.qix  final_dbscan_Corvara_IT_maxDist1k.shp  final_dbscan_Corvara_IT_maxDist1k.shx  final_dbscan_Corvara_IT_maxDist1k_maxN10_minP1_per10.dbf  final_dbscan_Corvara_IT_maxDist1k_maxN10_minP1_per10.qix  final_dbscan_Corvara_IT_maxDist1k_maxN10_minP1_per10.shp  final_dbscan_Corvara_IT_maxDist1k_maxN10_minP1_per10.shx  final_dbscan_Tokio_JP_maxDist1k_maxN10_1_50.dbf  final_dbscan_Tokio_JP_maxDist1k_maxN10_1_50.qix  final_dbscan_Tokio_JP_maxDist1k_maxN10_1_50.shp  final_dbscan_Tokio_JP_maxDist1k_maxN10_1_50.shx  final_dbscan_Wuerzburg_DE_maxDist1k_maxN10_1_50.dbf  final_dbscan_Wuerzburg_DE_maxDist1k_maxN10_1_50.qix  final_dbscan_Wuerzburg_DE_maxDist1k_maxN10_1_50.shp  final_dbscan_Wuerzburg_DE_maxDist1k_maxN10_1_50.shx  final_dbscan_Wuerzburg_DE_minP1_10per.dbf  final_dbscan_Wuerzburg_DE_minP1_10per.qix  final_dbscan_Wuerzburg_DE_minP1_10per.shp  final_dbscan_Wuerzburg_DE_minP1_10per.shx
resources/Zabljak_ME/: dbscan_Zabljak_ME_1minpoint_99.dbf
src/: CMakeLists.txt  ConvertShapeFile.hpp  DBSC.hpp  DBSCAN.hpp  Delaunay_Triangulation.txt  EdgeVisualizer.hpp  Error.txt  GraphFactory.hpp  Settlement.hpp  SubgraphBuilder.hpp  WeightedNode.hpp  WeightedNodeGraph.hpp  WeightedNodeGraphDecorator.hpp  example2.ggb  helper.cpp  helper.hpp  stats.hpp
src/examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp
stats/: compactness_results_Corvara_IT_100k_beta_2.txt  compactness_results_Corvara_IT_100k_beta_3.txt  compactness_results_Corvara_IT_keep_edges_beta_2.txt  dbsc_compactness_Wuerzburg_DE_beta2.txt  dbscan_compactness_Corvara_IT_eps_percentile99_Minpoints_1.txt  dbscan_compactness_Corvara_IT_eps_percentile99_Minpoints_2.txt  dbscan_compactness_results_Corvara_IT_Minpoints_10.txt  dbscan_compactness_results_Corvara_IT_eps_mean_Minpoints_3.txt  dbscan_compactness_results_Corvara_IT_eps_percentile_Minpoints_3.txt  final_dbscan_duration.txt
workflow/: CMakeLists.txt  SDAGraphConstruction.py  Usage.md  graph-construction-config.json  sda-compose.yaml
workflow/sda/: CMakeLists.txt
workflow/sda/4_contract/: CMakeLists.txt  ContractionConfig.hpp  ContractionTask.cpp  ContractionTask.h  IDReduceFunction.hpp
workflow/sda/shared/: CMakeLists.txt
workflow/sda/shared/filters/: ApproxAreaFilter.hpp  CMakeLists.txt  Filter.hpp  InsidePolygonFilter.hpp  ProjectedAreaFilter.hpp
workflow/sda/shared/job/: CMakeLists.txt  Job.hpp  JobAdjacency.hpp  JobDAG.hpp  JobWriter.hpp
workflow/sda/shared/neighbourPredicates/: CMakeLists.txt  DistanceBiPredicate.hpp  NeighbourPredicateJsonReader.hpp  NeighbourPredicateType.hpp
workflow/sda/shared/settlement/: CMakeLists.txt  ConnectedComponentsConfig.hpp  SettlementPolygon.hpp
(+136 files in other folders)
